<resources>
    <string name="app_name">Nina-del-burrito</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register_now">Register Now</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="te_vendo_burritos">Te vendo burritos</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="sign_out">Sign out</string>
    <string name="mi_menu">Mi menu</string>
    <string name="agregar_nuevo_producto">Agregar nuevo producto</string>
    <string name="already_registerd">Already registered. Login Me!</string>

    <string-array name="roles_array">
        <item>Vendedor</item>
        <item>Comprador</item>
    </string-array>
    <string name="title_activity_navigation_user">NavigationUserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_delivery">Map</string>
    <string name="title_activity_view_order_location">Map</string>

</resources>
