<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/txt_signuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="290dp"
        android:backgroundTint="#ff3300"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColorHint="#000" />

    <EditText
        android:id="@+id/txt_signpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="319dp"
        android:backgroundTint="#ff3300"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#000" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="122dp"
        android:background="@drawable/buttonloginstyle"
        android:onClick="signIn"
        android:text="@string/register_now"
        android:textColor="#ffff" />

    <Button
        android:id="@+id/btn_return_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:background="@null"
        android:onClick="logIn"
        android:text="@string/already_registerd"
        android:textAllCaps="false"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/spinner_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="246dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_signuser"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-219dp"
        app:srcCompat="@drawable/logo" />

</RelativeLayout>